--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # this fixes the colors
-set -g default-terminal "screen-256color"
-set -as terminal-features ",xterm-256color:RGB"
+# set -g default-terminal "screen-256color"
+# set -as terminal-features ",xterm-256color:RGB"
+#set -g default-terminal "screen-256color" 
+set-option -sa terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "tmux-256color"
 
 unbind C-b
 set-option -g prefix C-a
@@ -19,7 +22,7 @@ bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
