updating neovim plugins and scripts

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,13 +1,15 @@
 import=[
-    "~/.config/alacritty/themes/kanagawa.toml"
+    "~/.config/alacritty/themes/adwaita.toml"
 ]
+
+[env]
+term = "xterm-256color"
 
 [window]
 padding={x = 0, y = 0}
-decorations="None"
 blur=false
 opacity=1.0
 
 [font]
-normal={family="CaskaydiaMono NerdFont"}
+normal={family="Berkeley Mono"}
 size=14.0
