--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,7 +12,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 9.5
+font pango:CaskaydiaMono NerdFont 10.0
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -45,6 +45,7 @@ set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec ~/.config/i3/audio && $refresh_i3status 
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 
+bindsym $mod+Shift+f exec flameshot gui
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 bindsym XF86AudioPause exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
@@ -65,7 +66,8 @@ bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun 
+bindsym $mod+d exec --no-startup-id /home/wiru/.config/rofi/launchers/type-1/launcher.sh
+bindsym $mod+Shift+w exec --no-startup-id /home/wiru/.config/rofi/powermenu/type-3/powermenu.sh
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -201,9 +203,11 @@ bar {
     status_command i3status 
 }
 
-exec picom --daemon
+# exec picom --daemon
 exec nitrogen --restore
 exec xrandr --output HDMI-1 --mode 1920x1080 --rate 60 --left-of DP-2
 exec xrandr --output DP-2 --mode 1920x1080 --rate 240 --primary
 exec xinput --set-prop 17 'libinput Accel Profile Enabled' 0, 1
 exec xinput --set-prop 17 'libinput Accel Speed' 0
+exec_always --no-startup-id ~/.config/i3/sex
+
