--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,8 +2,17 @@
 # set -g default-terminal "screen-256color"
 # set -as terminal-features ",xterm-256color:RGB"
 #set -g default-terminal "screen-256color" 
-set-option -sa terminal-overrides ",xterm-256color:RGB"
+# set-option -sa terminal-overrides ",xterm-256color:RGB"
 set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+
+# make colors inside tmux look the same as outside of tmux
+# see https://github.com/tmux/tmux/issues/696
+# see https://stackoverflow.com/a/41786092
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "tmux-256color"
 
 unbind C-b
 set-option -g prefix C-a
