--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -198,16 +198,25 @@ bindsym $mod+Shift+s exec systemctl suspend
 # bindsym $mod+Control+s exec --nostartup-id systemctl suspend # doesnt work for some reason 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-# status_command i3status -c ~/.config/i3status/config
-    status_command i3status 
-}
 
-# exec picom --daemon
 exec nitrogen --restore
 exec xrandr --output HDMI-1 --mode 1920x1080 --rate 60 --left-of DP-2
 exec xrandr --output DP-2 --mode 1920x1080 --rate 240 --primary
 exec xinput --set-prop 17 'libinput Accel Profile Enabled' 0, 1
 exec xinput --set-prop 17 'libinput Accel Speed' 0
-exec_always --no-startup-id ~/.config/i3/sex
+exec_always --no-startup-id $HOME/.config/i3/sex
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id picom --daemon
 
+gaps inner 6
+gaps outer 0
+focus_follows_mouse no
+default_border pixel 2
+# class                 border  backgr. text    indicator child_borderclient.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+client.focused          #201c2c #285577 #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
