--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -138,9 +138,9 @@ format-muted = %{T2}<label-muted>
 label-volume = %percentage%%
 label-muted = 󰖁 %percentage%%
 label-muted-foreground = ${colors.disabled}
-click-left = ~/.config/hypr/scripts/volume.sh mute
-scroll-up = ~/.config/hypr/scripts/volume.sh up
-scroll-down = ~/.config/hypr/scripts/volume.sh down
+click-left = ~/.config/i3/volume mute
+scroll-up = ~/.config/i3/volume up
+scroll-down = ~/.config/i3/volume down
 
 [module/cpu]
 type = internal/cpu
