--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -6,23 +6,23 @@ monitor=HDMI-A-1,1920x1080@60,0x0,1
 monitor=DP-2,1920x1080@240,1920x0,1
 #monitor=,preferred,auto,auto
 
-env = XCURSOR_SIZE,24
-env = XDG_CURRENT_DESKTOP,Hyprland 
-env = XDG_SESSION_TYPE,wayland 
-env = XDG_SESSION_DESKTOP,Hyprland 
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt5ct #env = QT_STYLE_OVERRIDE,kvantum
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = SDL_VIDEODRIVER,wayland 
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = WLR_NO_HARDWARE_CURSORS,1 
-env = MOZ_DISABLE_RDD_SANDBOX,1
-env = MOZ_ENABLE_WAYLAND,1 
-env = OZONE_PLATFORM,wayland
-env = wallpaper_path,$HOME/personal/wallpapers #set wallpaper path
-env = HYPRSHOT_DIR,$HOME/personal/screenshots
+# env = XCURSOR_SIZE,24
+# env = XDG_CURRENT_DESKTOP,Hyprland 
+# env = XDG_SESSION_TYPE,wayland 
+# env = XDG_SESSION_DESKTOP,Hyprland 
+# env = GDK_BACKEND,wayland
+# env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct #env = QT_STYLE_OVERRIDE,kvantum
+# env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+# env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+# env = SDL_VIDEODRIVER,wayland 
+# env = _JAVA_AWT_WM_NONREPARENTING,1
+# env = WLR_NO_HARDWARE_CURSORS,1 
+# env = MOZ_DISABLE_RDD_SANDBOX,1
+# env = MOZ_ENABLE_WAYLAND,1 
+# env = OZONE_PLATFORM,wayland
+# env = wallpaper_path,$HOME/personal/wallpapers #set wallpaper path
+# env = HYPRSHOT_DIR,$HOME/personal/screenshots
 
 input {
     kb_layout = br
