--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -4,10 +4,9 @@ $fileManager = thunar
 
 # programs
 bind = $mainMod, Return, exec, $term # opens alacritty
-bind = $mainMod CTRL, L, exec, swaylock # lock the sessions
+# bind = $mainMod CTRL, L, exec, swaylock # lock the sessions
 bind = $mainMod, D, exec, killall rofi ||  rofi -show drun -theme ~/.config/rofi/config.rasi
 bind = $mainMod, W, exec, killall rofi ||  /home/wiru/.config/rofi/powermenu/type-1/powermenu.sh
-bind = $mainMod SHIFT, S, exec, /home/wiru/.config/hypr/scripts/spotify.sh
 bind = $mainMod SHIFT, F, exec, hyprshot -m region
 bind = $mainMod, E, exec, $fileManager # opens thunar
 bind = $mainMod SHIFT, B, exec, killall -SIGUSR2 waybar # reset waybar
