--- a/btop/.config/btop/btop.conf
+++ b/btop/.config/btop/btop.conf
@@ -4,7 +4,6 @@
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
 color_theme = "/home/wiru/.config/btop/themes/catppuccin_mocha.theme"
 
-
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = False
 
@@ -51,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "cpu proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
@@ -61,7 +60,7 @@ update_ms = 2000
 proc_sorting = "cpu direct"
 
 #* Reverse sorting order, True or False.
-proc_reversed = False
+proc_reversed = True
 
 #* Show processes as a tree.
 proc_tree = False
@@ -111,7 +110,7 @@ cpu_invert_lower = True
 cpu_single_graph = False
 
 #* Show cpu box at bottom of screen instead of top.
-cpu_bottom = False
+cpu_bottom = True
 
 #* Shows the system uptime in the CPU box.
 show_uptime = True
@@ -203,7 +202,7 @@ net_download = 100
 net_upload = 100
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto = True
+net_auto = False
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
 net_sync = True
