--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
-set-option -g default-shell /bin/zsh
+#set-option -g default-shell /bin/zsh
 set-option -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
