--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,7 +2,6 @@
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
-#set-option -g default-shell /bin/zsh
 set-option -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
@@ -19,6 +18,7 @@ bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
