im now setting up my own lsp

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,12 +6,17 @@ set-option -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+set -g focus-events on
+set -g status-style bg=default
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-justify centre
 
 bind -n M-J previous-window
 bind -n M-K next-window
