--- a/alacritty/.config/alacritty/themes/tinty.toml
+++ b/alacritty/.config/alacritty/themes/tinty.toml
@@ -1,37 +1,37 @@
-# Base16 Kanagawa - alacritty color config
-# Tommaso Laurenzi (https://github.com/rebelot)
+# Base16 Tokyodark - alacritty color config
+# Tiagovla (https://github.com/tiagovla/)
 
 [colors]
 draw_bold_text_with_bright_colors = false
 
 # Default colors
 [colors.primary]
-background = '#1f1f28'
-foreground = '#dcd7ba'
+background = '0x11121d'
+foreground = '0xabb2bf'
 
 # Colors the cursor will use if `custom_cursor_colors` is true
 [colors.cursor]
-text = '#1f1f28'
-cursor = '#dcd7ba'
+text = '0x11121d'
+cursor = '0xabb2bf'
 
 # Normal colors
 [colors.normal]
-black = '#1f1f28'
-red = '#c34043'
-green = '#76946a'
-yellow = '#c0a36e'
-blue = '#7e9cd8'
-magenta = '#957fb8'
-cyan = '#6a9589'
-white = '#dcd7ba'
+black = '0x11121d'
+red = '0xa485dd'
+green = '0xd7a65f'
+yellow = '0x7199ee'
+blue = '0x95c561'
+magenta = '0xee6d85'
+cyan = '0xa485dd'
+white = '0xabb2bf'
 
 # Bright colors
 [colors.bright]
-black = '#54546d'
-red = '#ffa066'
-green = '#16161d'
-yellow = '#223249'
-blue = '#727169'
-magenta = '#c8c093'
-cyan = '#d27e99'
-white = '#717c7c'
+black = '0x393a45'
+red = '0xa485dd'
+green = '0x151621'
+yellow = '0x43444f'
+blue = '0x1b1c27'
+magenta = '0x555661'
+cyan = '0x773440'
+white = '0x2c2d38'
