--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # this fixes the colors
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -g default-terminal "tmux-256color"
+set-option default-terminal "screen-256color"
+set-option -a terminal-overrides ",alacritty:RGB"
+set-option -g default-shell /bin/zsh
 
 set-option -g prefix C-a
 unbind C-b
@@ -16,14 +18,13 @@ set -g focus-events on
 set -g status-style bg=default
 set -g status-left-length 90
 set -g status-right-length 90
-set -g status-justify centre
+set -g status on
 
 bind -n M-J previous-window
 bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
