--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,12 +1,15 @@
 # this fixes the colors
-# set -g default-terminal "tmux-256color"
-set-option default-terminal "screen-256color"
-set-option -a terminal-overrides ",alacritty:RGB"
-set-option -g default-shell /bin/zsh
 
-set-option -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+set-option default-terminal "screen-256color"
+
+# for alacritty
+#set -g default-terminal "tmux-256color"
+set-option -a terminal-overrides ",alacritty:RGB"
+
+# for others
+#set-option -sa terminal-overrides ",xterm*:Tc"
+
+set-option -g default-shell /bin/zsh
 
 set -g mouse on
 set -g base-index 1
@@ -18,7 +21,7 @@ set -g focus-events on
 set -g status-style bg=default
 set -g status-left-length 90
 set -g status-right-length 90
-set -g status on
+set -g status off
 
 bind -n M-J previous-window
 bind -n M-K next-window
