--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,14 +1,14 @@
-import=[
+import = [
     #"~/.config/alacritty/themes/catpuccin-mocha.toml"
-    "~/.config/alacritty/themes/tinty.toml"
+    "~/.config/alacritty/themes/tinty.toml",
 ]
 
 [window]
-padding={x = 0, y = 0}
-blur=false
-opacity=1.0
+padding = { x = 0, y = 0 }
+blur = false
+opacity = 1.0
 
 [font]
-size=15.0
-normal={family="BerkeleyMono Nerd Font"}
-bold={family="BerkeleyMono Nerd Font"}
+size = 16.0
+normal = { family = "BerkeleyMono Nerd Font" }
+bold = { family = "BerkeleyMono Nerd Font" }
