--- a/alacritty/.config/alacritty/themes/tinty.toml
+++ b/alacritty/.config/alacritty/themes/tinty.toml
@@ -1,37 +1,37 @@
-# Base16 Tokyodark - alacritty color config
-# Tiagovla (https://github.com/tiagovla/)
+# Base16 Gruvbox dark, hard - alacritty color config
+# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
 [colors]
 draw_bold_text_with_bright_colors = false
 
 # Default colors
 [colors.primary]
-background = '0x11121d'
-foreground = '0xabb2bf'
+background = '0x1d2021'
+foreground = '0xd5c4a1'
 
 # Colors the cursor will use if `custom_cursor_colors` is true
 [colors.cursor]
-text = '0x11121d'
-cursor = '0xabb2bf'
+text = '0x1d2021'
+cursor = '0xd5c4a1'
 
 # Normal colors
 [colors.normal]
-black = '0x11121d'
-red = '0xa485dd'
-green = '0xd7a65f'
-yellow = '0x7199ee'
-blue = '0x95c561'
-magenta = '0xee6d85'
-cyan = '0xa485dd'
-white = '0xabb2bf'
+black = '0x1d2021'
+red = '0xfb4934'
+green = '0xb8bb26'
+yellow = '0xfabd2f'
+blue = '0x83a598'
+magenta = '0xd3869b'
+cyan = '0x8ec07c'
+white = '0xd5c4a1'
 
 # Bright colors
 [colors.bright]
-black = '0x393a45'
-red = '0xa485dd'
-green = '0x151621'
-yellow = '0x43444f'
-blue = '0x1b1c27'
-magenta = '0x555661'
-cyan = '0x773440'
-white = '0x2c2d38'
+black = '0x665c54'
+red = '0xfe8019'
+green = '0x3c3836'
+yellow = '0x504945'
+blue = '0xbdae93'
+magenta = '0xebdbb2'
+cyan = '0xd65d0e'
+white = '0xfbf1c7'
