--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,13 +1,9 @@
-# this fixes the colors
-
+# fixing tmux color skill issues
 set-option default-terminal "screen-256color"
-
 # for alacritty
-#set -g default-terminal "tmux-256color"
-set-option -a terminal-overrides ",alacritty:RGB"
-
-# for others
-#set-option -sa terminal-overrides ",xterm*:Tc"
+#set-option -a terminal-overrides ",alacritty:RGB"
+# for wezterm
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set-option -g default-shell /bin/zsh
 
@@ -16,7 +12,6 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
 set -g focus-events on
 set -g status-style bg=default
 set -g status-left-length 90
