im on my minimalistic era

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,16 +13,19 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 set -g focus-events on
-set -g status-style bg=default
-set -g status-left-length 90
-set -g status-right-length 90
-set -g status off
+set -g status on
 
 bind -n M-J previous-window
 bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'rose-pine/tmux'
+
+set -g @rose_pine_variant 'main'
+set -g @rose_pine_user 'on'
+set -g @rose_pine_directory 'on'
+set -g @rose_pine_disable_active_window_menu 'on'
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
