--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,12 +21,12 @@ bind -n M-K next-window
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'rose-pine/tmux'
-
 set -g @rose_pine_variant 'main'
 set -g @rose_pine_user 'on'
 set -g @rose_pine_directory 'on'
 set -g @rose_pine_disable_active_window_menu 'on'
 
+set-option -g status-position top
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
