--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -12,134 +12,131 @@
 ;==========================================================
 
 [colors]
-background = #1E1E2E
-background-alt = #1E1E2E
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
-white = #EAEAEA
-grey = #61616C
-green = #25D865
-blue = #168ECA
-mauve = #490761
+;; Base
+background = #191724
+;; Highlight Med
+background-alt = #21202e
+;; Text
+foreground = #e0def4
+;; Rose
+primary = #ebbcba
+;; Gold
+secondary = #f6c177	
+;; Love
+alert = #eb6f92
+;; Muted
+disabled = #6e6a86
 
 [bar/main]
 width = 100%
-height = 30pt
+height = 20pt
 radius = 0
 cursor-click = pointer
 background = ${colors.background}
 foreground = ${colors.foreground}
 monitor = ${env:MONITOR:}
 
-font-0 = "JetBrainsMono Nerd Font:weight=bold:size=12"
-font-1 = "Symbols Nerd Font Mono:size=14"
+font-0 = "Monaspace Argon:weight=bold:size=10;2"
+font-1 = "JetBrainsMono Nerd Font:size=14;4"
 
-line-size = 8pt
 border-size = 0pt
 border-color = #0000000
 padding-left = 1
 padding-right = 1
 module-margin = 0
 
-modules-left = arch space date space space spo space spotify space xwindow
-modules-center = xworkspaces
-modules-right = space space space space space mic space pulseaudio space space space space backlight space separator space separator space wlan space
+modules-left = arch i3
+modules-center = date-left date date-right
+modules-right = cpu filesystem pulseaudio space
 bottom = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = 
-label-active-padding = 1
-label-active-foreground = ${colors.disabled}
-label-active-font = 1
-
-label-occupied = 
-label-occupied-padding = 1
-label-occupied-font = 1
-
-label-empty = 
-label-empty-background = ${colors.background}
-label-empty-padding = 1
-label-empty-font = 1
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <laprimarybel-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-
-interval = 1
-format-connected-prefix-foreground = ${colors.white}
-format-connected-foreground = ${colors.white}
-format-connected = <label-connected>
-label-connected = 󰖩
-label-connected-padding = 0
-
-format-disconnected = <label-disconnected>
-format-disconnected-padding = 0
-label-disconnected = 󰖪
-label-disconnected-foreground = ${colors.white}
-label-disconnected-padding = 0
-
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-[module/mic]
-type = custom/script
-exec = ~/.config/polybar/mic.sh
-interval = 1  # Update interval in seconds
-format-foreground = ${colors.foreground}
-format = <label>
-label = %output%
-click-left = ~/Scripts/mic.sh 1
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume-prefix = "󰕾 "
-format-volume-foreground = ${colors.foreground}
-format-volume-prefix-foreground = ${colors.foreground}
+format-volume-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.alert}
 format-volume = <label-volume>
 label-volume = %percentage%%
 
 label-muted = 󰖁 %percentage%%
 label-muted-foreground = ${colors.disabled}
 
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.alert}
+format-foreground = ${colors.primary}
+label = "%percentage:2%%  "
+
 [module/date]
 type = internal/date
 interval = 1
-date = %I:%M %p|%d-%m
-label = %date%
-label-foreground = ${colors.white}
 
-[module/spo]
-type = custom/text
-content = 
-content-foreground = ${colors.green}
-content-margin = 0
+date = %H:%M
+date-alt = "  %a %d %b - %I:%M %p  "
 
+label = "  %date%  "
+label-foreground = ${colors.primary}
+label-background = ${colors.background-alt}
+label-font = 0
 
 [module/arch]
 type = custom/text
 content = 󰣇
-content-foreground = ${colors.blue}
+content-foreground = ${colors.alert}
 content-margin = 0
+label-font = 1
+
+[module/i3]
+type = internal/i3
+index-sort = true
+
+label-focused-padding = 1
+label-focused-foreground = ${colors.alert}
+
+label-unfocused-padding = 1
+label-unfocused-foreground = ${colors.disabled}
+
+label-visible-padding = 1
+label-visible-foreground = ${colors.disabled}
+
+label-urgent-padding = 1
+label-urgent-foreground = ${colors.disabled}
+
+[module/date-left]
+type = custom/text
+content = ""
+content-foreground = ${colors.background-alt}
+content-font = 0
+
+[module/date-right]
+type = custom/text
+content = ""
+content-foreground = ${colors.background-alt}
+content-font = 0
 
 [module/space]
 type = custom/text
-content = " "
+content = "  "
+content-font = 0
 
-[module/separator]
-type = custom/text
-content = "|"
-content-foreground = ${colors.disabled}
+[module/filesystem]
+type = internal/fs
+label-mounted = " %free%  "
+format-mounted-prefix = "󰋊 "
+format-mounted-foreground = ${colors.primary}
+format-mounted-prefix-foreground = ${colors.alert}
+mount-0 = /
+interval = 10
+fixed-values = true
+spacing = 4
+warn-percentage = 75
