--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,21 @@
 # fixing tmux color skill issues
-set-option default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 # for alacritty
 #set-option -a terminal-overrides ",alacritty:RGB"
 # for wezterm
-set-option -sa terminal-overrides ",xterm*:Tc"
+# set -sa default-terminal "screen-256color"
+# set -sa terminal-features ",xterm-256color:RGB"
+# set -sa terminal-overrides ",xterm*:Tc"
+# set -ag terminal-overrides ",xterm-256color:RGB"
+# set -sg terminal-overrides ",*:RGB"
+
+# set -g default-terminal "screen-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
+# for tmux 3.2, you can use the following setting instead:
+# set -as terminal-features ",xterm-256color:RGB"
 
 set-option -g default-shell /bin/zsh
 
@@ -20,11 +32,21 @@ bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main'
-set -g @rose_pine_user 'on'
-set -g @rose_pine_directory 'on'
-set -g @rose_pine_disable_active_window_menu 'on'
+
+set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-theme 'dragon'
+set -g @kanagawa-show_location false
+set -g @kanagawa-show_network false
+set -g @kanagawa-show_cpu false
+set -g @kanagawa-show_weather false
+set -g @kanagawa-plugins "n"
+
+# set -g @plugin 'rose-pine/tmux'
+# set -g @rose_pine_variant 'main'
+# set -g @rose_pine_user 'on'
+# set -g @rose_pine_directory 'on'
+# set -g @rose_pine_disable_active_window_menu 'on'
 
 set-option -g status-position top
 set-window-option -g mode-keys vi
