--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,8 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 set -g focus-events on
 set -g status on
+set -s escape-time 0
+
 
 bind -n M-J previous-window
 bind -n M-K next-window
@@ -33,20 +35,20 @@ bind -n M-K next-window
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @plugin 'Nybkox/tmux-kanagawa'
-set -g @kanagawa-ignore-window-colors true
-set -g @kanagawa-theme 'dragon'
-set -g @kanagawa-show_location false
-set -g @kanagawa-show_network false
-set -g @kanagawa-show_cpu false
-set -g @kanagawa-show_weather false
-set -g @kanagawa-plugins "n"
+# set -g @plugin 'Nybkox/tmux-kanagawa'
+# set -g @kanagawa-ignore-window-colors true
+# set -g @kanagawa-theme 'dragon'
+# set -g @kanagawa-show_location false
+# set -g @kanagawa-show_network false
+# set -g @kanagawa-show_cpu false
+# set -g @kanagawa-show_weather false
+# set -g @kanagawa-plugins "n"
 
-# set -g @plugin 'rose-pine/tmux'
-# set -g @rose_pine_variant 'main'
-# set -g @rose_pine_user 'on'
-# set -g @rose_pine_directory 'on'
-# set -g @rose_pine_disable_active_window_menu 'on'
+set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'moon'
+set -g @rose_pine_user 'on'
+set -g @rose_pine_directory 'on'
+set -g @rose_pine_disable_active_window_menu 'on'
 
 set-option -g status-position top
 set-window-option -g mode-keys vi
