--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,4 @@
-# fixing tmux color skill issues
-# set -g default-terminal "xterm-256color"
+# fixing tmux color skill issues set -g default-terminal "xterm-256color"
 set -g default-terminal "tmux-256color"
 # for alacritty
 #set-option -a terminal-overrides ",alacritty:RGB"
@@ -28,30 +27,34 @@ set -g focus-events on
 set -g status on
 set -s escape-time 0
 
-
 bind -n M-J previous-window
 bind -n M-K next-window
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# set -g @plugin 'Nybkox/tmux-kanagawa'
-# set -g @kanagawa-ignore-window-colors true
-# set -g @kanagawa-theme 'dragon'
-# set -g @kanagawa-show_location false
-# set -g @kanagawa-show_network false
-# set -g @kanagawa-show_cpu false
-# set -g @kanagawa-show_weather false
-# set -g @kanagawa-plugins "n"
+set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-theme 'dragon'
+set -g @kanagawa-show_location false
+set -g @kanagawa-show_network false
+set -g @kanagawa-show_cpu false
+set -g @kanagawa-show_weather false
+set -g @kanagawa-plugins "n"
 
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'moon'
-set -g @rose_pine_user 'on'
-set -g @rose_pine_directory 'on'
-set -g @rose_pine_disable_active_window_menu 'on'
+# set -g @plugin 'rose-pine/tmux'
+# set -g @rose_pine_variant 'moon'
+# set -g @rose_pine_user 'on'
+# set -g @rose_pine_directory 'on'
+# set -g @rose_pine_disable_active_window_menu 'on'
+
+# set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark'
 
 set-option -g status-position top
 set-window-option -g mode-keys vi
+set -g mode-keys vi
+
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
