--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,13 @@
 # fixing tmux color skill issues set -g default-terminal "xterm-256color"
 set -g default-terminal "tmux-256color"
 # for alacritty
-set-option -a terminal-overrides ",alacritty:RGB"
+# set-option -a terminal-overrides ",alacritty:RGB"
 # for wezterm
 # set -sa default-terminal "screen-256color"
 # set -sa terminal-features ",xterm-256color:RGB"
 # set -sa terminal-overrides ",xterm*:Tc"
 # set -ag terminal-overrides ",xterm-256color:RGB"
-# set -sg terminal-overrides ",*:RGB"
+set -sg terminal-overrides ",*:RGB"
 
 set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
@@ -16,7 +16,7 @@ set -g default-terminal "screen-256color"
 # for tmux 3.2, you can use the following setting instead:
 # set -as terminal-features ",xterm-256color:RGB"
 
-set-option -g default-shell /bin/nu
+set-option -g default-shell /bin/zsh
 
 set -g mouse on
 set -g base-index 1
