--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,16 +7,17 @@ set -g default-terminal "tmux-256color"
 # set -sa terminal-features ",xterm-256color:RGB"
 # set -sa terminal-overrides ",xterm*:Tc"
 # set -ag terminal-overrides ",xterm-256color:RGB"
-set -sg terminal-overrides ",*:RGB"
+# set -sg terminal-overrides ",*:RGB"
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 # tell Tmux that outside terminal supports true color
-# set -ga terminal-overrides ",xterm-256color*:Tc"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # for tmux 3.2, you can use the following setting instead:
 # set -as terminal-features ",xterm-256color:RGB"
 
 set-option -g default-shell /bin/zsh
+set-option -g history-limit 10000
 
 set -g mouse on
 set -g base-index 1
@@ -33,23 +34,32 @@ bind -n M-K next-window
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @plugin 'Nybkox/tmux-kanagawa'
-set -g @kanagawa-ignore-window-colors true
-set -g @kanagawa-theme 'dragon'
-set -g @kanagawa-show_location false
-set -g @kanagawa-show_network false
-set -g @kanagawa-show_cpu false
-set -g @kanagawa-show_weather false
-set -g @kanagawa-plugins "n"
+# set -g @plugin 'Nybkox/tmux-kanagawa'
+# set -g @kanagawa-ignore-window-colors true
+# set -g @kanagawa-theme 'lotus'
+# set -g @kanagawa-show_location false
+# set -g @kanagawa-show_network false
+# set -g @kanagawa-show_cpu false
+# set -g @kanagawa-show_weather false
+# set -g @kanagawa-plugins "n"
 
 # set -g @plugin 'rose-pine/tmux'
 # set -g @rose_pine_variant 'moon'
 # set -g @rose_pine_user 'on'
 # set -g @rose_pine_directory 'on'
 # set -g @rose_pine_disable_active_window_menu 'on'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
 
-# set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'dark'
+# set -g @plugin 'niksingh710/minimal-tmux-status'
+# set -g @minimal-tmux-bg "#007373"
+# set -g @minimal-tmux-fg "#e0e2ea"
+# set -g status-bg "#0d1117"
+# set -g status-fg "#cecece"
+# set -g @minimal-tmux-justify "centre"
+# set -g @minimal-tmux-indicator-str "  tmux  "
+# set -g @minimal-tmux-indicator true
+# set -g @minimal-tmux-status "bottom"
 
 set-option -g status-position top
 set-window-option -g mode-keys vi
