--- a/ghostty/config
+++ b/ghostty/config
@@ -8,7 +8,7 @@ font-feature = calt
 font-feature = ss20
 font-size = 16
 
-theme = GruvBoxDark
+theme = gruber_darker
 
 adjust-cell-height = 20%
 window-padding-y = 0
