--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,5 +50,11 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind -n C-M-h resize-pane -L 2
+bind -n C-M-j resize-pane -D 2
+bind -n C-M-k resize-pane -U 2
+bind -n C-M-l resize-pane -R 2
+
+
 bind '"' split-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
