things and stuff and things

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 if-shell "uname | grep -q Darwin" \
   "set-option -g default-shell /opt/homebrew/bin/fish" \
-  "set-option -g default-shell /usr/bin/fish"
+  "set-option -g default-shell /usr/sbin/zsh"
 set-option -g history-limit 10000
 
 set -g mouse on
