--- a/nvim/stylua.toml
+++ b/nvim/stylua.toml
@@ -2,7 +2,7 @@ column_width = 120
 line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
-collapse_simple_statement = "Always"
+collapse_simple_statement = "Never"
 
 [sort_requires]
 enabled = true
